# go-rust-wasm-bench

./: .gitattributes  .gitignore  BENCHMARK.md  BENCHMARK_zhCN.md  DRAFT.md  LICENSE  Makefile  README.md  go.mod  package-lock.json  package.json  requirements.txt
go/conv/: conv.go
go/jsonrt/: jsonrt.go
go/sha/: sha.go
harness/: build-time.sh
harness/browser/: bench.mjs  conv.html  json.html
harness/wasi/: bench.sh
results/: build-metrics.json  generate_charts.py  generate_charts.sh  print_tables.py  print_tables.sh
results/browser/: conv_results.json  json_results.json  results.json
results/wasi/: conv_1024x1024_k3_cold.json  conv_1024x1024_k3_rss_go.txt  conv_1024x1024_k3_warm_go.txt  conv_1024x1024_k3_warm_rust.txt  conv_1024x1024_k3_warm_tinygo.txt  (+94 more)
rust/: Cargo.toml
rust/conv-browser/: Cargo.toml
rust/conv-browser/src/: lib.rs
rust/conv-wasi/: Cargo.toml
rust/conv-wasi/src/: main.rs
rust/json-browser/: Cargo.toml
rust/json-browser/src/: lib.rs
rust/json-wasi/: Cargo.toml
rust/json-wasi/src/: main.rs
rust/sha-wasi/: Cargo.toml
rust/sha-wasi/src/: main.rs
rust/shared/: Cargo.toml
rust/shared/src/: conv.rs  jsonrt.rs  lib.rs  sha.rs
testdata/: generate.go  image_256x256.rgba  image_256x256_conv3_ref.rgba  image_256x256_conv5_ref.rgba  image_512x512.rgba  image_512x512_conv3_ref.rgba  image_512x512_conv5_ref.rgba  sha256_16MB_ref.txt  sha256_1KB_ref.txt  sha256_1MB_ref.txt  sha256_64KB_ref.txt  users_100.json  users_1000.json  users_10000.json  users_10000_ref.json  users_1000_ref.json  users_100_ref.json
(+5 files in other folders)
