[workspace]
members = [
    "shared",
    "conv-browser",
    "conv-wasi",
    "json-browser",
    "json-wasi",
    "sha-wasi",
]
resolver = "2"

[workspace.dependencies]
shared = { path = "shared" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
